# diffusion2d

./: README.md  diffusion2d.py  output.py  pyproject.toml
nagasaji_diffusion2d/: __init__.py  diffusion2d.py
