[project]
name = "nagasaji_diffusion2d"
version = "0.0.1"
description = "A solver for the two-dimensional diffusion equation"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "nagasaji", email = "196687@stud.uni-stuttgart.de"}
]
license = {file = "LICENSE"}
keywords = ["diffusion", "simulation", "2d", "heat-transfer", "pde"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
]

[project.urls]
Homepage = "https://github.com/Simulation-Software-Engineering/diffusion2d"
Repository = "https://github.com/Simulation-Software-Engineering/diffusion2d"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
